Add initial mock up

--- a/eng/tools/ToolMetadataExporter/appsettings.json
+++ b/eng/tools/ToolMetadataExporter/appsettings.json
@@ -1,5 +1,12 @@
 {
-    "ClusterName": "McpClusterName",
-    "DatabaseName": "McpDatastore",
-    "McpToolEventsTableName": "McpToolEvents"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug"
+        }
+    },
+    "AppConfig": {
+        "ClusterName": "McpClusterName",
+        "DatabaseName": "McpDatastore",
+        "McpToolEventsTableName": "McpToolEvents"
+    }
 }
