Split to use Query and Ingestion endpoint.

--- a/eng/tools/ToolMetadataExporter/appsettings.json
+++ b/eng/tools/ToolMetadataExporter/appsettings.json
@@ -5,7 +5,8 @@
         }
     },
     "AppConfig": {
-        "ClusterName": "McpClusterName",
+        "IngestionEndpoint": "https://ingest-your-server.region.kusto.windows.net",
+        "QueryEndpoint": "https://your-server.region.kusto.windows.net",
         "DatabaseName": "McpDatastore",
         "McpToolEventsTableName": "McpToolEvents"
     }
