--- a/eng/common/pipelines/templates/jobs/npm-publish.yml
+++ b/eng/common/pipelines/templates/jobs/npm-publish.yml
@@ -69,7 +69,7 @@ jobs:
           displayName: 'Packages to be published'
 
         - ${{ if eq(parameters.Registry, 'https://registry.npmjs.org/') }}:
-          - task: ESRPRelease@10
+          - task: EsrpRelease@9
             displayName: 'Publish ${{ parameters.ArtifactName }} via ESRP'
             condition: and(succeeded(), ne(variables['SkipPublishing'], 'true'))
             inputs:
