--- a/servers/Azure.Mcp.Server/vscode/tsconfig.json
+++ b/servers/Azure.Mcp.Server/vscode/tsconfig.json
@@ -8,6 +8,7 @@
         ],
         "sourceMap": true,
         "rootDir": "src",
+        "resolveJsonModule": true,
         "strict": true,   /* enable all strict type-checking options */
         "alwaysStrict": true,
         "noFallthroughCasesInSwitch": true,
