--- a/servers/Azure.Mcp.Server/vscode/package.json
+++ b/servers/Azure.Mcp.Server/vscode/package.json
@@ -165,20 +165,19 @@
     "devDependencies": {
         "@azure/core-auth": "^1.4",
         "@types/chai": "~4",
-        "@types/glob": "~7",
         "@types/mocha": "~10",
         "@types/node": "~16",
         "@types/semver": "~7",
         "@types/sinon": "^17.0.4",
         "@types/vscode": "^1.101.0",
-        "@typescript-eslint/eslint-plugin": "~6",
-        "@typescript-eslint/parser": "~6",
+        "@typescript-eslint/eslint-plugin": "^8.47.0",
+        "@typescript-eslint/parser": "^8.47.0",
         "@vscode/test-electron": "~2",
         "@vscode/vsce": "~3",
         "chai": "~4",
-        "eslint": "~8",
-        "glob": "~8",
-        "mocha": "~10",
+        "eslint": "~9",
+        "glob": "^13.0.0",
+        "mocha": "~11",
         "node-loader": "~2",
         "sinon": "^21.0.0",
         "terser-webpack-plugin": "^5.3.14",
