--- a/servers/Template.Mcp.Server/vscode/package.json
+++ b/servers/Template.Mcp.Server/vscode/package.json
@@ -63,10 +63,13 @@
                 },
                 "templateMcp.serverMode": {
                     "type": "string",
-                    "enum": ["single", "namespace", "all"],
+                    "enum": [
+                        "single",
+                        "namespace",
+                        "all"
+                    ],
                     "default": "namespace",
                     "markdownDescription": "Server Mode determines how tools are exposed: `single` collapses every tool (100+) into one (1) single tool that routes internally, `namespace` (default) collapses all tools down into logical Template service namespace grouping (about 30 tools), while `all` exposes every MCP tool directly to the MCP client. We recommend namespace as the right balance between MCP tool count and tool selection accuracy. **Note:** Changes require restarting the MCP server if MCP Autostart is not configured (Command Palette → MCP: List Servers → Template MCP → Start/Restart)."
-
                 },
                 "templateMcp.readOnly": {
                     "type": "boolean",
@@ -76,8 +79,7 @@
             }
         }
     },
-    "extensionPack": [
-    ],
+    "extensionPack": [],
     "scripts": {
         "vscode:prepublish": "npm run build",
         "compile": "tsc -p ./",
@@ -91,20 +93,19 @@
     "devDependencies": {
         "@azure/core-auth": "^1.4",
         "@types/chai": "~4",
-        "@types/glob": "~7",
         "@types/mocha": "~10",
         "@types/node": "~16",
         "@types/semver": "~7",
         "@types/sinon": "^17.0.4",
         "@types/vscode": "^1.101.0",
-        "@typescript-eslint/eslint-plugin": "~6",
-        "@typescript-eslint/parser": "~6",
+        "@typescript-eslint/eslint-plugin": "^8.47.0",
+        "@typescript-eslint/parser": "^8.47.0",
         "@vscode/test-electron": "~2",
         "@vscode/vsce": "~3",
         "chai": "~4",
-        "eslint": "~8",
-        "glob": "~8",
-        "mocha": "~10",
+        "eslint": "~9",
+        "glob": "^13.0.0",
+        "mocha": "~11",
         "node-loader": "~2",
         "sinon": "^21.0.0",
         "terser-webpack-plugin": "^5.3.14",
