--- a/servers/Fabric.Mcp.Server/src/Fabric.Mcp.Server.csproj
+++ b/servers/Fabric.Mcp.Server/src/Fabric.Mcp.Server.csproj
@@ -14,7 +14,7 @@
     <NpmPackageKeywords>fabric,mcp,model-context-protocol</NpmPackageKeywords>
 
     <!-- docker settings -->
-    <DockerImageName></DockerImageName>
+    <DockerImageName>msfabric/fabric-mcp</DockerImageName>
 
     <!-- dnx/nuget settings -->
     <DnxPackageId>Microsoft.Fabric.Mcp</DnxPackageId>
