Add path to server.json. Update script to use that path.

--- a/eng/pipelines/templates/jobs/update-mcp-repository.yml
+++ b/eng/pipelines/templates/jobs/update-mcp-repository.yml
@@ -38,6 +38,7 @@ jobs:
       scriptLocation: 'scriptPath'
       scriptPath: $(Build.SourcesDirectory)/eng/scripts/Deploy-ServerJson.ps1
       arguments: >
+        -ServerJsonPath: '$(Pipeline.Workspace)/build_info/${{ parameters.ServerName }}/server.json'
         -ServerName '${{ parameters.ServerName }}'
         -BuildInfoPath '$(Pipeline.Workspace)/build_info/build_info.json'
         -KeyVaultName 'azuresdkengkeyvault'
