Add ServerName parameter to common.yml and integration.yml. Update integration to push to staging

--- a/eng/pipelines/templates/common.yml
+++ b/eng/pipelines/templates/common.yml
@@ -151,3 +151,5 @@ extends:
           - template: /eng/pipelines/templates/variables/globals.yml
           jobs:
           - template: /eng/pipelines/templates/jobs/integration.yml
+            parameters:
+              ServerName: ${{ parameters.ServerName }}
