--- a/servers/Template.Mcp.Server/src/Template.Mcp.Server.csproj
+++ b/servers/Template.Mcp.Server/src/Template.Mcp.Server.csproj
@@ -9,8 +9,8 @@
     <!-- <PackageIcon></PackageIcon> Defaults to the microsoft logo if not specified. -->
 
     <!-- Official MCP repository settings -->
-    <!-- <McpRepositoryName>com.microsoft/template-server-name</McpRepositoryName> -->
-    <!-- <ServerJsonPath>$(MSBuildThisFileDirectory)../server.json</ServerJsonPath> -->
+    <McpRepositoryName>com.microsoft/template-server-name</McpRepositoryName>
+    <ServerJsonPath>$(MSBuildThisFileDirectory)../server.json</ServerJsonPath>
 
     <!-- npm settings -->
     <NpmPackageName>@azure/mcp-template</NpmPackageName>
