Fix Nugetrelease job name

--- a/eng/pipelines/templates/jobs/release.yml
+++ b/eng/pipelines/templates/jobs/release.yml
@@ -76,7 +76,7 @@ jobs:
   parameters:
     ServerName: ${{ parameters.ServerName }}
     DependsOn:
-    - PublishNuget
+    - PublishNugetPackage
     - PublishNpm
 
 - job: UpdatePackageVersion
