--- a/eng/pipelines/templates/jobs/nuget/pack-and-sign-nuget.yml
+++ b/eng/pipelines/templates/jobs/nuget/pack-and-sign-nuget.yml
@@ -38,7 +38,7 @@ jobs:
       pwsh: true
       filePath: $(Build.SourcesDirectory)/eng/scripts/Pack-Nuget.ps1
       arguments: >
-        -BuildInfoPath '$(Pipeline.Workspace)/build_info/build_info.json'
+        -BuildInfoPath '$(Pipeline.Workspace)/build_info'
         -ArtifactsPath '$(Pipeline.Workspace)/binaries_signed'
         -OutputPath '$(Build.ArtifactStagingDirectory)'
 
