--- a/servers/Fabric.Mcp.Server/src/appsettings.json
+++ b/servers/Fabric.Mcp.Server/src/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-    "RootCommandGroupName": "fabric",
+    "RootCommandGroupName": "fabmcp",
     "Name": "Fabric.Mcp.Server",
     "DisplayName": "Fabric MCP Server"
 }
