Add comment to appsettings.Dev.json.

--- a/servers/Azure.Mcp.Server/src/appsettings.Development.json
+++ b/servers/Azure.Mcp.Server/src/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+    // Generally, AZURE_MCP_COLLECT_TELEMETRY will be set as an environment variable.
+    // For Development purposes, we never want to publish telemetry so it is explicitly
+    // set here.
     "AZURE_MCP_COLLECT_TELEMETRY": "false",
     "Logging": {
         "LogLevel": {
