Use Azure.Monitor.Query.Logs package to query logs

--- a/tools/Azure.Mcp.Tools.Deploy/src/Azure.Mcp.Tools.Deploy.csproj
+++ b/tools/Azure.Mcp.Tools.Deploy/src/Azure.Mcp.Tools.Deploy.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="ModelContextProtocol" />
     <PackageReference Include="System.CommandLine" />
-    <PackageReference Include="Azure.Monitor.Query" />
+    <PackageReference Include="Azure.Monitor.Query.Logs" />
     <PackageReference Include="Azure.ResourceManager" />
     <PackageReference Include="Azure.ResourceManager.AppService" />
     <PackageReference Include="Azure.ResourceManager.AppContainers" />
