Update build pipeline to support server.json (#1104)
* Add initial version of server.json

* Update release pipelines.

* Add server.json for Fabric.

* Update KeyVault name and key

* Add documentation to powershell script. Copy go-install.ps1

* Use checked in Go-Install

* Add ServerJsonPath to Build-Info

* Use placeholder version

* Only publish for matching ServerName

* Add script to verify-Nugetrelease

* Add step to verify nuget package release

* Remove duplicated New-BuildInfo McpRepositryName

* Add script to generate server.json

* Add creation of server.json to initialize

* Add path to server.json. Update script to use that path.

* Fixup order for build-info.sjon

* Add documentation and support for querying a nuget feed.

* Add ServerName parameter to common.yml and integration.yml. Update integration to push to staging

* Add NugetFeedIndexUrl to update-mcp

* Force create file and any children directories.

* Move check for publish targets.

* Add template server.json. Update placeholders in server.json files. Update csproj files to reference server.json files.

* Add server.json to packaging.

--- a/servers/Azure.Mcp.Server/src/Azure.Mcp.Server.csproj
+++ b/servers/Azure.Mcp.Server/src/Azure.Mcp.Server.csproj
@@ -7,7 +7,10 @@
     <ReadmeUrl>https://github.com/Microsoft/mcp/blob/main/servers/Azure.Mcp.Server#readme</ReadmeUrl>
     <ReadmePath>$(RepoRoot)/servers/Azure.Mcp.Server/README.md</ReadmePath>
     <PackageIcon>$(MSBuildThisFileDirectory)../azureicon.png</PackageIcon>
+
+    <!-- Official MCP repository settings -->
     <McpRepositoryName>com.microsoft/azure</McpRepositoryName>
+    <ServerJsonPath>$(MSBuildThisFileDirectory)../server.json</ServerJsonPath>
 
     <!-- npm settings -->
     <NpmPackageName>@azure/mcp</NpmPackageName>
