--- a/servers/Template.Mcp.Server/src/Template.Mcp.Server.csproj
+++ b/servers/Template.Mcp.Server/src/Template.Mcp.Server.csproj
@@ -6,8 +6,11 @@
     <Description>Template MCP Server - Basic Model Context Protocol implementation</Description>
     <ReadmeUrl>https://github.com/Microsoft/mcp/blob/main/servers/Template.Mcp.Server#readme</ReadmeUrl>
     <ReadmePath>$(RepoRoot)/servers/Template.Mcp.Server/README.md</ReadmePath>
-    <McpRepositoryName>com.microsoft/template-server-name</McpRepositoryName>
     <!-- <PackageIcon></PackageIcon> Defaults to the microsoft logo if not specified. -->
+
+    <!-- Official MCP repository settings -->
+    <McpRepositoryName>com.microsoft/template-server-name</McpRepositoryName>
+    <ServerJsonPath>$(MSBuildThisFileDirectory)../server.json</ServerJsonPath>
 
     <!-- npm settings -->
     <NpmPackageName>@azure/mcp-template</NpmPackageName>
