--- a/eng/pipelines/templates/jobs/release.yml
+++ b/eng/pipelines/templates/jobs/release.yml
@@ -72,6 +72,13 @@ jobs:
       ServerName: ${{ parameters.ServerName }}
       DependsOn: TagRepository
 
+- template: /eng/pipelines/templates/jobs/update-mcp-repository.yml
+  parameters:
+    ServerName: ${{ parameters.ServerName }}
+    DependsOn:
+    - PublishNugetPackage
+    - PublishNpm
+
 - job: UpdatePackageVersion
   displayName: "Update Package Versions"
   condition: and(succeeded(), ne(variables['Skip.UpdatePackageVersion'], 'true'))
