Move Command and IAreaSetup types to Microsoft.Mcp.Core

--- a/core/Azure.Mcp.Core/src/Azure.Mcp.Core.csproj
+++ b/core/Azure.Mcp.Core/src/Azure.Mcp.Core.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="ModelContextProtocol.AspNetCore" />
     <PackageReference Include="System.Linq.AsyncEnumerable" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
 </Project>
