Moving classes into src/tests

--- a/eng/tools/ToolMetadataExporter/src/ToolMetadataExporter.csproj
+++ b/eng/tools/ToolMetadataExporter/src/ToolMetadataExporter.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\ToolDescriptionEvaluator\Models\*.cs" Link="Models\%(Filename)%(Extension)" />
+    <Compile Include="..\..\ToolDescriptionEvaluator\src\Models\*.cs" Link="Models\%(Filename)%(Extension)" />
   </ItemGroup>
 
   <ItemGroup>
