--- a/servers/Azure.Mcp.Server/vscode/.vscode/launch.json
+++ b/servers/Azure.Mcp.Server/vscode/.vscode/launch.json
@@ -12,12 +12,11 @@
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}"
             ],
-            "preLaunchTask": "${defaultBuildTask}",
+            "preLaunchTask": "publish-azmcp-binary",
             "env": {
                 // Disable telemetry when running the extension under the debugger.
                 // Set this to "verbose" to show telemetry in the console during debugging.
-                "DEBUGTELEMETRY": "true",
-                "DEBUG_AZMCP_BINARY_RELATIVE_PATH": "../src/bin/Debug/net9.0"
+                "DEBUGTELEMETRY": "true"
             },
             "outFiles": [
                 "${workspaceFolder}/dist/**/*.js",
