--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -65,17 +65,12 @@
 # ServiceLabel: %tools-AppService
 # ServiceOwners:                       @ArthurMa1978 @weidongxu-microsoft 
 
-# PRLabel: %tools-AIBestPractices
-/tools/Azure.Mcp.Tools.AzureAIBestPractices/        @XiaofuHuang @microsoft/azure-mcp
-
-# ServiceLabel: %tools-AIBestPractices
-# ServiceOwners:                       @XiaofuHuang
 
 # PRLabel: %tools-BestPractices
-/tools/Azure.Mcp.Tools.AzureBestPractices/             @g2vinay @conniey @fanyang-mono @microsoft/azure-mcp
+/tools/Azure.Mcp.Tools.AzureBestPractices/             @g2vinay @conniey @fanyang-mono @XiaofuHuang @microsoft/azure-mcp
 
 # ServiceLabel: %tools-BestPractices
-# ServiceOwners:                       @g2vinay @conniey @fanyang-mono
+# ServiceOwners:                       @g2vinay @conniey @fanyang-mono @XiaofuHuang
 
 # PRLabel: %tools-Bicep
 /tools/Azure.Mcp.Tools.BicepSchema/             @msalaman @saikoumudi @microsoft/azure-mcp
