--- a/eng/pipelines/templates/jobs/integration.yml
+++ b/eng/pipelines/templates/jobs/integration.yml
@@ -10,6 +10,11 @@ jobs:
 - job: PublishToDev
   displayName: Publish packages to dev feeds
   condition: and(succeeded(), ne(variables['Skip.PublishPackage'], 'true'))
+  pool:
+    # On linux, we'd need mono to run nuget, so just use windows
+    name: $(WINDOWSPOOL)
+    image: $(WINDOWSVMIMAGE)
+    os: windows
   steps:
   - checkout: self
 
@@ -40,7 +45,6 @@ jobs:
       packageParentPath: '$(Pipeline.Workspace)'
       packagesToPush: '$(Pipeline.Workspace)/packages_nuget_signed/**/*.nupkg;!$(Pipeline.Workspace)/packages_nuget_signed/**/*.symbols.nupkg'
       publishVstsFeed: ${{ parameters.NugetDevFeed }}
-      useDotNetTask: true
 
   - task: PowerShell@2
     displayName: 'Attach usage instructions to build summary'
