Enable debugging Azure MCP vscode extension in vscode (#1336)
* Enable debugging Azure MCP vscode extension in vscode

* Use preLaunchTask to publish azmcp binary to extension folder for debugging

* Update documentation

* Remove outdated comment

* Use self-contained=false

* Add back problemMatcher

--- a/servers/Azure.Mcp.Server/vscode/.vscode/tasks.json
+++ b/servers/Azure.Mcp.Server/vscode/.vscode/tasks.json
@@ -40,6 +40,24 @@
             "problemMatcher": [],
             "label": "npm: ci-build",
             "detail": "npm run lint && npm run build"
+        },
+        {
+            "label": "publish-azmcp-binary",
+            "type": "shell",
+            "command": "pwsh",
+            "args": [
+                "-ExecutionPolicy",
+                "Bypass",
+                "-File",
+                "${workspaceFolder}/publish-azmcp.ps1"
+            ],
+            "dependsOn": "npm dev-build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated",
+                "clear": false
+            },
+            "problemMatcher": []
         }
     ]
 }
