--- a/servers/Azure.Mcp.Server/vscode/.vscode/launch.json
+++ b/servers/Azure.Mcp.Server/vscode/.vscode/launch.json
@@ -12,7 +12,7 @@
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}"
             ],
-            "preLaunchTask": "${defaultBuildTask}",
+            "preLaunchTask": "publish-azmcp-binary",
             "env": {
                 // Disable telemetry when running the extension under the debugger.
                 // Set this to "verbose" to show telemetry in the console during debugging.
