--- a/eng/pipelines/templates/jobs/release.yml
+++ b/eng/pipelines/templates/jobs/release.yml
@@ -47,6 +47,8 @@ jobs:
     env:
       GH_TOKEN: $(azuresdk-github-pat)
 
+- template: /eng/pipelines/templates/jobs/publish-symbols.yml
+
 - template: /eng/pipelines/templates/jobs/npm/release-npm.yml
   parameters:
     ServerName: ${{ parameters.ServerName }}
